--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
                     <li>
 
-                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html">About us</a>
+                        <a class="nav-link active " aria-current="page" href="/MKbootstrap/about.html">About us</a>
                     </li>
   </ul>   
 
