--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
                     <li>
 
-                        <a class="nav-link " aria-current="page" href="/MKbootstrap/contact.html">Contact us</a>
+                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html">Contact us</a>
                     </li>
 
                     <li>
