--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,12 @@
 
                     <li>
 
-                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html">Contact us</a>
+                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html/">Contact us</a>
                     </li>
 
                     <li>
 
-                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html">About us</a>
+                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html/">About us</a>
                     </li>
   </ul>   
 
