--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="MKbootstrap/">Home</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -41,12 +41,12 @@
 
                     <li>
 
-                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html/">Contact us</a>
+                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html">Contact us</a>
                     </li>
 
                     <li>
 
-                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html/">About us</a>
+                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html">About us</a>
                     </li>
   </ul>   
 
