--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
          <div class="container-fluid">
-            <a class="navbar-brand" href="/MKbootstrap/">MK</a>
+            <a class="navbar-brand" href="/MK-Project/">MK</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="MKbootstrap/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/MK-Project/">Home</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -41,12 +41,12 @@
 
                     <li>
 
-                        <a class="nav-link active" aria-current="page" href="/MKbootstrap/contact.html">Contact us</a>
+                        <a class="nav-link active" aria-current="page" href="/MK-Project/contact.html">Contact us</a>
                     </li>
 
                     <li>
 
-                        <a class="nav-link " aria-current="page" href="/MKbootstrap/about.html">About us</a>
+                        <a class="nav-link " aria-current="page" href="/MK-Project/about.html">About us</a>
                     </li>
   </ul>   
 
